namespace Onogawa.Scripts.Point
{
    public enum Rank
    {
        S,
        A,
        B,
        C
    }
}